<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

    <Button
            android:text="Add Ride"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddRide"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="148dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true" android:id="@+id/txtDeparture"
            android:hint="Departure" android:layout_alignParentStart="true"
            tools:layout_editor_absoluteY="417dp" tools:layout_editor_absoluteX="105dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true" android:id="@+id/txtDate"
            android:hint="Date" tools:layout_editor_absoluteY="277dp" tools:layout_editor_absoluteX="69dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true" android:id="@+id/txtStreet"
            android:hint="Street" android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" tools:layout_editor_absoluteY="175dp"
            tools:layout_editor_absoluteX="40dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true" android:id="@+id/txtHouseNr"
            android:hint="HouseNr" tools:layout_editor_absoluteY="323dp" tools:layout_editor_absoluteX="123dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentBottom="true" android:id="@+id/txtZipcode"
            android:hint="Zipcode" android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="84dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/txtMaxPassengers"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:id="@+id/txtMaxPassengers"
            android:hint="MaxPassengers"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="84dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
</android.support.constraint.ConstraintLayout>