<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home"/>
    <item
            android:id="@+id/nav_allRides"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="All Rides"/>
    <item
            android:id="@+id/nav_addRide"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Add Ride"/>

</menu>