<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:id="@+id/activity_main">



    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

    <Button
            android:id="@+id/logout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"/>
    <Button
            android:text="Start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnStart"/>

</LinearLayout>